[gd_scene load_steps=5 format=3 uid="uid://cyccuinqqvdxu"]

[ext_resource type="Script" path="res://Scene/Job Dropdownlist.gd" id="1_vs1qa"]

[sub_resource type="LabelSettings" id="LabelSettings_nxuue"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_r3x8a"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_dgp3a"]
font_size = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vs1qa")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.0
offset_top = 71.0
offset_right = 231.0
offset_bottom = 134.0
grow_horizontal = 2
text = "JOB DROPDOWN LIST"
label_settings = SubResource("LabelSettings_nxuue")

[node name="Dropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -138.0
offset_right = 134.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true

[node name="jobname" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -13.0
offset_right = 69.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "Jobname :"
label_settings = SubResource("LabelSettings_r3x8a")
horizontal_alignment = 1

[node name="description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 39.0
offset_right = 69.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
text = "Description :"
label_settings = SubResource("LabelSettings_r3x8a")
horizontal_alignment = 1

[node name="skill" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 109.0
offset_right = 69.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
text = "Skill"
label_settings = SubResource("LabelSettings_dgp3a")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 142.0
offset_right = 109.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="skill1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="skill2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="skill3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[connection signal="item_selected" from="Dropdown" to="." method="_on_dropdown_item_selected"]
